tests/golden/6-numeric-literals-and-notations/invalid/strict/bad-integer-literal-1.yini
^ BadInteger
badInt = --1     # NOT a valid integer literal
